--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.2.5.jar=lib\\flatlaf-3.2.5.jar
 file.reference.flatlaf-extras-3.2.5.jar=lib\\flatlaf-extras-3.2.5.jar
-file.reference.jsvg-1.2.0.jar=..\\..\\jsvg-1.2.0.jar
+file.reference.jsvg-1.2.0.jar=lib/jsvg-1.2.0.jar
 file.reference.miglayout-core-11.2.jar=lib\\miglayout-core-11.2.jar
 file.reference.miglayout-swing-11.2.jar=lib\\miglayout-swing-11.2.jar
 file.reference.mysql-connector-java-8.0.27.jar=lib\\mysql-connector-java-8.0.27.jar
@@ -49,8 +49,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.swing-toast-notifications-1.0.1.jar}:\
     ${file.reference.flatlaf-extras-3.2.5.jar}:\
-    ${file.reference.jsvg-1.2.0.jar}:\
     ${libs.absolutelayout.classpath}:\
+    ${file.reference.jsvg-1.2.0.jar}:\
     ${file.reference.miglayout-core-11.2.jar}:\
     ${file.reference.miglayout-swing-11.2.jar}
 # Space-separated list of extra javac options
