모달 기능 추가

--- a/src/companydbmanagerant/theme/FlatDarkLaf.properties
+++ b/src/companydbmanagerant/theme/FlatDarkLaf.properties
@@ -21,3 +21,9 @@ Button.borderWidth = 1
 Button.borderColor= lighten(@background,44%)
 
 Component.focusColor = lighten(@background,46%)
+
+
+EmpolyeeEditPanel.background=lighten(@background,16%)
+EmpolyeeEditPanel.arc=10
+EmpolyeeEditPanel.borderWidth = 1
+EmpolyeeEditPanel.borderColor= lighten(@background,44%)
