--- a/src/companydbmanagerant/theme/FlatDarkLaf.properties
+++ b/src/companydbmanagerant/theme/FlatDarkLaf.properties
@@ -27,3 +27,5 @@ EmpolyeeEditPanel.background=lighten(@background,16%)
 EmpolyeeEditPanel.arc=10
 EmpolyeeEditPanel.borderWidth = 1
 EmpolyeeEditPanel.borderColor= lighten(@background,44%)
+Table.cellFocusColor =lighten(@background,99%)
+Table.selectionBackground   =lighten(@background,22%)
