--- a/src/companydbmanagerant/theme/FlatDarkLaf.properties
+++ b/src/companydbmanagerant/theme/FlatDarkLaf.properties
@@ -10,7 +10,7 @@ Login.background=lighten(@background,7%)
 
 
 Component.focusedBorderColor= lighten(@background,44%)
-
+Component.focusColor = lighten(@background,46%)
 
 Button.focusedBackground  =  = lighten(@background,44%)
 Button.focusedBorderColor= lighten(@background,44%)
@@ -20,7 +20,6 @@ Button.focusedBackground = lighten(@background,14%)
 Button.borderWidth = 1
 Button.borderColor= lighten(@background,44%)
 
-Component.focusColor = lighten(@background,46%)
 
 
 EmpolyeeEditPanel.background=lighten(@background,16%)
@@ -29,3 +28,12 @@ EmpolyeeEditPanel.borderWidth = 1
 EmpolyeeEditPanel.borderColor= lighten(@background,44%)
 Table.cellFocusColor =lighten(@background,99%)
 Table.selectionBackground   =lighten(@background,22%)
+
+
+
+
+ToError.outlineColor =rgb(229, 57, 53) 
+ToError.focusColor = rgb(244, 67, 54)
+
+ToValid.outlineColor = rgb(67, 160, 71)
+ToValid.focusedBorderColor = rgb(76, 175, 80)
